--- a/src/components/Originals/index.css
+++ b/src/components/Originals/index.css
@@ -1,10 +1,9 @@
-.trending-image {
+.originals-image {
   height: 140px;
 }
 .slider-item-container {
-  margin: 10px;
 }
 
-.trending-header {
+.originals-header {
   color: #ffffff;
 }
