--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -4,15 +4,16 @@
   background-image: url('https://res.cloudinary.com/dk5lwv6ev/image/upload/v1671790320/MoviesApp/netfilx_1_1x_d8qzvw.png');
   background-size: cover;
   display: flex;
+  justify-content: space-around;
   flex-direction: column;
-  justify-content: space-evenly;
+
   align-items: center;
   font-family: Roboto;
 }
 
 .login-logo-container {
   align-self: flex-start;
-  margin-top: 1%;
+  margin-top: -5%;
   margin-left: 3%;
 }
 
@@ -22,7 +23,8 @@
 }
 
 .login-card-container {
-  width: 356px;
+  margin-top: -20%;
+  width: 366px;
   height: 350px;
   border-radius: 8px;
   opacity: 80%;
@@ -30,6 +32,7 @@
 }
 .login-form-container {
   height: 100%;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
