--- a/src/components/PopularMovieItem/index.css
+++ b/src/components/PopularMovieItem/index.css
@@ -3,12 +3,7 @@
 }
 
 .popular-item-image {
-  width: 75px;
+  width: 255px;
+  height: 170px;
   border-radius: 5px;
-}
-
-@media screen and (min-width: 687px) {
-  .popular-item-image {
-    min-width: 110px;
-  }
 }
