--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -8,7 +8,7 @@
   flex-direction: column;
 
   align-items: center;
-  font-family: Roboto;
+  font-family: HK Grotesk;
 }
 
 .login-logo-container {
