--- a/src/components/Originals/index.css
+++ b/src/components/Originals/index.css
@@ -2,9 +2,11 @@
   width: 254px;
   height: 170px;
 }
-.slider-item-container {
-}
-
 .originals-header {
   color: #ffffff;
+  font-size: 24px;
+  font-family: HK Grotesk;
+}
+.slider-container {
+  font-family: HK Grotesk;
 }
